@alinamgz: fixed form:focus jumping and checkbox-text checking (with old useless lines commented)

--- a/fem1-mazur-hw4/css/style.css
+++ b/fem1-mazur-hw4/css/style.css
@@ -1,8 +1,13 @@
 
 /* Background */
 .background {
-    padding-bottom: 1px;
+    display: flex;
+    flex-direction: column;
+    /*align-items: center;*/
+    /*justify-content: space-a;*/
+    /*padding-bottom: 1wh;*/
     background: #3a3d38 url("../img/background-rana-sawalha.png") no-repeat;
+    height: 100vh;
     background-size: cover;
 }
 
@@ -89,17 +94,24 @@
 
 /* Authorisation field */
 .authorisation-wraper{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-self: center;
     position:relative;
-    box-sizing: border-box;
+    margin: auto;
+    /*box-sizing: border-box;*/
+    /*height: 524px;*/
+    width:324px;
     padding: 30px 60px;
-    width: 30%;
-    margin: 5% 35%;
     border-radius: 10px;
     background-color: #ffffff;
 }
 
 /* Authorisation header */
 .authorisation-header{
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 15px;
 }
 .authorisation-title{
@@ -118,7 +130,6 @@
 }
 .authorisation-link{
     display: inline-block;
-    float: right;
     text-decoration: none;
     font-family: Verdana, Courier, sans-serif;
     font-size: 14px;
@@ -131,6 +142,8 @@
 /* Social-media authorisation buttons */
 
 .authorisation-social-btn-container{
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 30px;
 }
 .authorisation-form-btn{
@@ -158,7 +171,7 @@
 }
 /* Facebook */
 .facebook-btn{
-    float:left;
+    /*float:left;*/
     background-color: #305db8;
 }
 .facebook-btn:hover{
@@ -176,7 +189,7 @@
 }
 /* Google */
 .google-btn{
-    float: right;
+    /*float: right;*/
     background-color:#df4a32;
 }
 .google-btn:hover{
@@ -193,7 +206,9 @@
 }
 /* Autorisation spacer */
 .authorisation-spacer{
-    margin-bottom: 18px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 30px;
 }
 .authorisation-spacer-or{
     position: relative;
@@ -222,7 +237,14 @@
 }
 
 /* Authorisation form inputs */
+.authorisation-form{
+    display: flex;
+    flex-direction: column;
+    /*align-content: start;*/
+    box-sizing: border-box;
+}
 .authorisation-form-inputs{
+    position: relative;
     box-sizing: border-box;
     padding: 18px;
     margin-bottom: 9px;
@@ -231,7 +253,7 @@
     border-radius: 3px;
 }
 .authorisation-form-inputs:focus{
-    margin-bottom: 17px;
+    bottom: 6px;
     color: #434343;
     box-shadow: 0 5px 8px #d6d6d6;
 }
@@ -258,7 +280,7 @@
 .confirm-btn{
     width: 100%;
     height: 46px;
-    margin-bottom: 32px;
+    /*margin-bottom: 32px;*/
     background-color: #3cb878;
 }
 .confirm-btn:hover{
